Package CLI launcher with jlink image